# Orig_ACT

./: .gitignore  LICENSE  log231225  pyproject.toml  run_pipeline.py
act_pipeline/: README.md  config.yaml  yaml_17_30
act_pipeline/data/bch/: pipeline_csh_list.bch
act_pipeline/data/cal/: IPSP74______1FHHSHHB01RHHPHHEHM1.cal  new_calibration.cal
act_pipeline/data/cfg/: SC2_RITA_Calibration.cfg
act_pipeline/data/json/: SC2_RITA_params.json  SC3_RITA_params.json
act_pipeline/data/xlsx/: results.xlsx
act_pipeline/kernel/: loss.py
act_pipeline/kernel/converters/: converter_cal.py  converter_params.py  converter_results.py
act_pipeline/kernel/optimization/: param_normalizer.py  saasbo.py
act_pipeline/kernel/simulation/: runner.py
act_pipeline/kernel/utils/: get_rita_params.py
act_pipeline/scripts/: run_pipeline.py
act_pipeline/tests/: Test_path.py  test_converter.py  test_loss.py  test_saasbo.py
files_datas_results/: P74_2024_SC3_PSA_61_04 Reference.prt  pipeline_csh_list.fls  pipeline_csh_list.txt
files_datas_results/pipeline_csh_list/: pipeline_generationpipeline_csh_listGlobal Result.xlsx  pipeline_generationpipeline_csh_listGlobal Result.xml
sandbox/ALE Core Calibration/AEE Calibration/MAC_III_Tool/360x/: History.docx  Mac.cfg  Mac.enc  MarginTest.cfg
sandbox/ALE Core Calibration/AEE Calibration/MAC_III_Tool/360x/Filters/: 6in1E_60Hz_AccXY.dft  (+29 more)
sandbox/Source/: CalibLayoutInterface_OpsReAlg.h  CalibLayoutInterface_OpsReAlg_Process_Veh_Dyn.h  OpsReAlg.c  OpsReAlg.h  OpsReAlg_IntMdl.h  OpsReAlg_Process_Veh_Dyn.c  OpsReAlg_Process_Veh_Dyn.h
(+257 files in other folders)
